# verify_yew

./: Cargo.toml  docker-compose.yml  index.html  style.css
docker/: Dockerfile
src/: component.rs  dto.rs  main.rs
src/component/: app.rs  input_tokenid.rs  verify.rs  verify_table.rs
src/dto/: verify_data.rs
