[package]
name = "verify_yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
yew-router = "0.16"
reqwasm = "0.5.0"
serde = "1.0.140"
wasm-bindgen-futures = "0.4.31"
wasm-bindgen = "0.2"
log = "0.4.6"
wasm-logger = "0.2.0"
web-sys = { version = "0.3", features = ["Event","EventTarget","InputEvent"] }